# branch-watch

./: Cargo.toml  README.md  action.yml
.github/workflows/: release.yml
npm/: package.json
python/: pyproject.toml
src/: config.rs  github.rs  main.rs
src/commands/: branches.rs  forks.rs  mod.rs  prs.rs
