[package]
name = "branch-watch"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bw"
path = "src/main.rs"

[dependencies]
octocrab = "0.44"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
indicatif = "0.17"
anyhow = "1"
dirs = "5"
