[package]
name = "branch-watch"
version = "0.2.0"
edition = "2024"
description = "Track branch and fork sync status across your GitHub repositories"
license = "MIT"
repository = "https://github.com/nuri-yoo/branch-watch"
homepage = "https://github.com/nuri-yoo/branch-watch"
keywords = ["github", "git", "cli", "branch", "fork"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "bw"
path = "src/main.rs"

[dependencies]
octocrab = "0.44"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
indicatif = "0.17"
anyhow = "1"
dirs = "5"
