[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "branch-watch"
version = "0.2.0"
description = "Track branch and fork sync status across your GitHub repositories"
readme = "../README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["github", "git", "branch", "fork", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/nuri-yoo/branch-watch"
Repository = "https://github.com/nuri-yoo/branch-watch"

[project.scripts]
bw = "branch_watch:main"

[tool.hatch.build.targets.wheel]
packages = ["src/branch_watch"]
